# GCN_UNET_agreement_demo

./: .gitignore  AgreementCalculator.cpp  AgreementCalculator.hpp  CMakeLists.txt  CustomBar.cpp  CustomBar.hpp  CustomGUI.cpp  CustomGUI.hpp  DistanceNetProcessor.cpp  DistanceNetProcessor.hpp  LICENSE  README.md  main.cpp
models/: README_models.md
